tests/error/errors_on_usage/branch_in_modifier.err
Error: Variable modified in modifier block (at $FILE:11:8)
   | 
 9 |             x = 3 # probably here is not visited?
10 |     a = b
11 |     c = x +1
   |         ^ Cannot use `x` because it was modified inside a modifier
   |           block

Note:
   | 
 8 |         if b:
 9 |             x = 3 # probably here is not visited?
   |             ----- `x` modified here

Help: Modifications inside modifier blocks are not reflected outside the block

Guppy compilation failed due to 1 previous error
